k8s/base/mongo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: slack-clone
  labels:
    app: mongo
    tier: database
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
